test/compilable/imports/depsOutput9948b.d
module imports.depsOutput9948b;

void foo()
{

}