test/fail_compilation/fail267.d
class C
{
    template Bar()
    {
    }
}

typeof(C.Bar.foo) quux;

